# recursor

./: .gitignore  README.md  main.py  pyproject.toml
recursor/: main.py
